@@ -7,3 +7,4 @@ Make Injured and Broke Leg traits mutually exclusive to Indefatigable to prevent
 Prepared: Camping now gives a Small Hiking Bag instead of a Regular Hiking Bag.
 Prepared: Bag now gives a Regular Hiking Bag instead of a Big Hiking Bag.
 Prepared: Carpentry no longer gives a Crowbar.
+Refactor Prowess traits to properly increase durability of respective weapons.
